..F....... [ZBXNEXT-2662] fixed close button z-index; added horizontal check/radio list
git-svn-id: svn://svn.zabbix.com/branches/dev@54665 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBXNEXT-2662-7/sass/stylesheets/sass/screen.scss
+++ b/ZBXNEXT-2662-7/sass/stylesheets/sass/screen.scss
@@ -1290,7 +1290,7 @@ footer {
 
 	li {
 		display: block;
-		padding: 0.3em 0 0.3em 0;
+		padding: 0.3em 0;
 	}
 
 	label {
@@ -1309,6 +1309,16 @@ footer {
 			margin: 0;
 		}
 	}
+}
+
+.list-hor-check-radio {
+	@extend .list-check-radio;
+
+	li {
+		display: inline-block;
+		margin: 0 15px 0 0;
+	}
+
 }
 
 label {
@@ -2923,7 +2933,7 @@ td.disaster-bg {
 
 .overlay-close-btn {
 	position: absolute;
-	z-index: 10000;
+	z-index: 1000;
 	top: 0;
 	right: 0;
 	@extend %close-icon;
